--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   margin: auto;
   display: block;
   box-shadow: 0px 3px 12px #000;
-  background: #001711;
+  background: #00BFFF;
   border-radius: 4px;
   padding: 10px;
 }
