--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   text-align: center;
   background-image: url(images/left.png);
   background-repeat: no-repeat;
-  background-color: #F26522;
-  color: #DA4930;
+  background-color: #00BFFF;
+  color: #00BFFF;
   font-family: "Days One", sans-serif;
 }
 
@@ -25,7 +25,7 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  background: #001711;
+  background: #00BFFF;
   width: 255px;
   height: 420px;
   margin: auto;
