--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background-image: url(images/left.png);
   background-repeat: no-repeat;
   background-color: #9999FF;
-  color: #9999FF;
+  color: #CC66CC;
   font-family: "Days One", sans-serif;
 }
 
@@ -25,7 +25,7 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  background: #9999FF;
+  background: #CC99FF;
   width: 255px;
   height: 420px;
   margin: auto;
