--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 body {
   text-align: center;
-  background-image: url(images/left.png);
+  background-image: url(http://24.media.tumblr.com/tumblr_m24ffvkHYh1rtqw0ko1_500.png);
   background-repeat: no-repeat;
   background-color: #00CCFF;
   color: #33CC66;
